# gitstream

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  EFFICIENCY_REPORT.md  LICENSE.md  README.md  extract_automations.py  gitstream-schema.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  shaked.js  sitemap.xml  test_schema.py
.cm/: approve-maintainer.cm  ask-ai.cm  debug.cm  gitstream.cm  notify-dev-team.cm
automation-actions/: index.html
automations/: README.md  automation-template.md
bitbucket-installation/: index.html
changelog/: index.html
cm-file/: index.html
cm-syntax/: index.html
context-variables/: index.html
custom-filters/: index.html
custom-github-app/: index.html
docs/: Plugins.md  automation-actions.md  bitbucket-installation.md  changelog.md  cm-file.md  cm-syntax.md  context-variables.md  custom-filters-v1.md  custom-filters.md  custom-github-app.md  dry-run-mode.md  examples.md  execution-model.md  faq.md  filter-function-plugins.md  filter-functions.md  gitStream-playground.md  github-app-setup.md  github-installation.md  github-org-level.md  github-required-check.md  gitlab-installation.md  how-it-works.md  ide-integration.md  index.md  limits.md  managed-mode.md  plugins-for-developers.md  plugins.md  quick-start.md  troubleshooting.md  user-commands.md
downloads/: approvals.cm  approve-additions-to-tests.cm  approve-changes-to-prints.cm  approve-safe-changes.cm  assign-mentors-to-new-contributors.cm  (+23 more)
scripts/extractor/: .gitignore  Cargo.toml  README.md
scripts/extractor/src/: main.rs  parser.rs  utils.rs
(+1073 files in other folders)
